@@ -97,10 +97,12 @@ WHAT IS NEW?
       "fill parent", "is filling parent", "slice to back",
       "slice to front", "Y sort children", "set sort order",
       "get sort order", "sort children", "set slice extra",
-      "get slice extra", "slice edge x", "slice edge y" [James]
+      "get slice extra", "slice edge x", "slice edge y", "create text
+       slice", "set slice text", "get text slice color", "set text
+       slice color", "set wrap", "get wrap" [James]
     * "set slice visible", "get slice visible". Old command
       "set sprite visible" still exists but is now just an alias
-      for "set slice visible" [James]
+      for "set slice visible". [James]
     * "number from string" [James]
     * There are now 3 NPC extra data fields (0-2) accessible with
       "set NPC extra" instead of 2 [Ralph]
